# distributed-game-backend

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
gateway-service/: Dockerfile  package-lock.json  package.json
gateway-service/public/: app.js  index.html  styles.css
gateway-service/src/: grpc_clients.js  server.js
k8s/: 00-namespace-config.yaml  01-postgres.yaml  02-redis.yaml  03-player-service.yaml  04-match-service.yaml  05-gateway.yaml
match-service/: CMakeLists.txt  Dockerfile
match-service/src/: db_pool.h  main.cpp  match_service_impl.cpp  match_service_impl.h  player_client.cpp  player_client.h
player-service/: CMakeLists.txt  Dockerfile
player-service/src/: cache_client.cpp  cache_client.h  db_pool.cpp  main.cpp  player_service_impl.cpp  player_service_impl.h
proto/: match.proto  player.proto
scripts/: load_test.js  smoke_test.sh
